--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
   "_direct": true,
   "license": "MIT",
   "version": "0.0.1",
-  "main": "src/logmatic.js",
+  "main": "src/logmatic.min.js",
   "keywords": [
     "logmatic-js",
     "jslogger",
