npm and bower versions aligned

--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
   "keywords": [
     "logmatic-js",
     "jslogger",
-    "logmatic"
+    "logmatic",
+    "js tracker"
   ],
   "authors": [
     "Logmatic.io"
