--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bower": "^1.4.1",
     "grunt": "^0.4.5",
     "grunt-contrib-uglify": "^0.9.1",
+    "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^1.0.1",
     "karma-jasmine": "^1.0.2"
