--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "logmatic-js",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "Client-side JavaScript logging library for Logmatic.io",
   "main": "src/logmatic.js",
   "repository": {
@@ -19,6 +19,7 @@
     "bower": "^1.4.1",
     "grunt": "^0.4.5",
     "grunt-contrib-uglify": "^0.9.1",
+    "grunt-karma": "^2.0.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^1.0.1",
