--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^1.0.1",
-    "karma-jasmine": "^1.0.2"
+    "karma-jasmine": "^1.0.2",
+    "webpack": "^2.2.1"
+  },
+  "scripts": {
+    "build": "webpack -p"
   }
 }
